--- a/css/index.css
+++ b/css/index.css
@@ -23,7 +23,6 @@ body{
 .header{
     background-color: rgba(109, 147, 5, 0.5);
     display: flex;
-    justify-content:space-between;
     align-items:center;
     height: 85px;
     padding: 5px 10%;
@@ -46,10 +45,14 @@ body{
     transform: scale(1.2);
 }
 
-.header .nav-links{
+#navBotones{
     width: 50%;
+}
+
+.header .nav-links{
+    width: 100%;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     list-style: none;
 }
 
