--- a/css/barra_navegacion.css
+++ b/css/barra_navegacion.css
@@ -5,15 +5,16 @@
     margin: 0;
     padding: 0;
     font-family: 'Nunito', sans-serif;
-    font-size: 20px;
+    font-size: 20px; 
 }
 
 .header{
     background-color: rgba(109, 147, 5, 0.5);
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
     display: flex;
     align-items:center;
     justify-content:space-between;
-    height: 85px;   
+    height: 85px;
     width: 100%;
 }
 
@@ -40,6 +41,7 @@
     /* padding-right: 5px; */
     display: flex;
     justify-content: end;
+    align-items: center;
     margin-right: 2%;
 }
 
@@ -53,10 +55,22 @@
     flex-direction: row;
     list-style: none;
 }
+@media(min-width:800px)
+{
+    .header .nav-links{
+        flex-wrap: nowrap;
+
+    }
+    .header .nav-links li{
+        flex-wrap: nowrap;
+        font-size: 15px;
+        padding: none;
+    }
+}
 
 .header .nav-links li{
     display: inline-block;
-    padding: 20px 20px;
+    padding: 15px 15px;
 }
 
 .header .nav-links li:hover{
@@ -74,7 +88,6 @@
 }
 
 .header .btn button{
-    margin-top: 3px;
     margin-right: 10px;
     font-weight: 700;
     color: #1b3039;
